--- a/smart-buddy/src/index.css
+++ b/smart-buddy/src/index.css
@@ -26,6 +26,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -54,7 +55,28 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+.main_home {
+  text-align: center;
+  background-color: #f9f9f9;
+  border: black solid;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin: auto;
+  width: 70%;
+}
+.main_home > p {
+  width: 80%;
+}
 
+.cadastro-login {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  margin: 5%
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
