--- a/smart-buddy/src/App.css
+++ b/smart-buddy/src/App.css
@@ -7,8 +7,10 @@ body {
   align-items: center;
   justify-content: space-around;
   position: fixed;
+  max-height: 10%;
   width: 100%;
   top: 0;
   left: 0;
   z-index: 1000;
 }
+
