página eventos criada

--- a/smart-buddy/src/index.css
+++ b/smart-buddy/src/index.css
@@ -68,6 +68,24 @@ button:focus-visible {
   width: 80%;
 }
 
+.main_eventos {
+  text-align: center;
+  background-color: #f9f9f9;
+  border: black solid;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin: auto;
+  margin-top: 12%;
+  margin-bottom: 12%;
+  width: 90%;
+}
+.main_eventos > p {
+  width: 90%;
+}
+
 .cadastro-login {
   display: flex;
   width: 100%;
