--- a/smart-buddy/src/index.css
+++ b/smart-buddy/src/index.css
@@ -81,7 +81,8 @@ button:focus-visible {
   margin: auto;
   margin-top: 12%;
   margin-bottom: 12%;
-  width: 90%;
+  width: 80vw;
+  max-width: 800px;
 }
 .main_eventos > p {
   width: 90%;
@@ -322,98 +323,35 @@ button[type="submit"]:hover {
   background-color: #0056b3;
 }
 
-
-
-/*
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  justify-content: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-  text-align: center;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-.main_home {
-  text-align: center;
-  background-color: #f9f9f9;
-  border: black solid;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  margin: auto;
-  width: 70%;
-}
-.main_home > p {
+.events-list {
   width: 80%;
 }
 
-.cadastro-login {
-  display: flex;
+.event {
+  display: flex; 
   width: 100%;
-  justify-content: space-around;
-  margin: 5%
+  margin: 2%;
+  border: solid red 2px;
 }
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
+.event > p {
+  margin: 0;
+  padding: 0;
 }
-*/
+
+.diaDoMes {
+  background: #0056b3;
+  border-radius: 100%;
+  color: #f9f9f9;
+}
+.nomeMes {
+  font-weight: bold;
+}
+
+.colDatasEvento, .colHorario, .colDescricaoEvento {
+  margin: 2%;
+}
+
+.colDescricaoEvento {
+  text-align: left;  
+}
