--- a/smart-buddy/src/index.css
+++ b/smart-buddy/src/index.css
@@ -517,3 +517,14 @@ button[type="submit"]:hover,
 button[type="button"]:hover {
   background-color: #0056b3;
 }
+
+.modalLogin {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
