--- a/src/index.css
+++ b/src/index.css
@@ -72,17 +72,14 @@ button:focus-visible {
 }
 
 .main_eventos {
-  text-align: center;
-  background-color: #f9f9f9;
-  border-radius: 10px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row-reverse;
   align-items: center;
-  justify-content: space-around;
-  margin: 2% auto;
-  width: 90%;
-  max-width: 800px;
   padding: 20px;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+
 }
 
 .cadastro-login {
@@ -313,9 +310,14 @@ button[type="submit"] {
 button[type="submit"]:hover {
   background-color: #0056b3;
 }
-
-.events-list {
+.events-container {
+  display: flex;
   width: 100%;
+  margin-top: 20px;
+}
+.events-list {
+  flex: 2;
+  margin-right: 20px;
 }
 
 .event {
@@ -346,7 +348,10 @@ h2 {
   justify-content: center;
   align-items: center;
 }
-
+.calendar-container {
+  flex: 1;
+  max-width: 400px;
+}
 .nomeMes {
   font-weight: bold;
   margin-top: 0.5rem;
@@ -442,9 +447,7 @@ h2 {
   }
 
   .button {
-    width: 100%;
-    margin-bottom: 10px;
-  }
+    margin: 10px;
 
   .button-group {
     display: flex;
@@ -544,4 +547,5 @@ button[type="button"]:hover {
   padding: 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
+}
 }
