--- a/src/index.css
+++ b/src/index.css
@@ -349,8 +349,9 @@ button[type="submit"]:hover {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  height: 5rem;
   margin-top: 0;
-  margin: 0  0.5vw 0.5vw;
+  margin: 0  0.7vw 0.7vw;
   padding: 10px;
   border: 2px solid red;
   border-radius: 20px;
@@ -383,6 +384,23 @@ h2 {
   margin-top: 0.5rem;
 }
 
+.colHorario {
+  display: flex;
+  width: 5rem;
+  align-items: center;
+  justify-items: center;
+}
+.colHorario> p {
+  margin: 0.3rem;
+  font-weight: bold;
+}
+.colDatasEvento > p {
+  margin: 0.3rem;
+}
+.diaDoMes {
+  font-weight: 800;
+}
+
 .colDatasEvento,
 .colHorario,
 .colDescricaoEvento,
@@ -398,9 +416,8 @@ h2 {
   width: 3rem;
 }
 
-.colHorario {
-  width: 5rem;
-}
+
+
 
 .colDescricaoEvento {
   text-align: left;
